2008-07-02  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.c: (crawler_finalize): Don't use
	g_free() to free a GFile. This is a hangover from when the files
	and directories queues had strings in them, now they have GFiles.

2008-07-02  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-metadata.c:
	* src/trackerd/tracker-main.c:
	* src/trackerd/tracker-daemon.c:
	* src/trackerd/tracker-db.c:

	Various database connection usage improvements

	* src/libtracker-common/tracker-log.c:

	Added a perror() to find out about a race condition while writing to
	the log file

2008-07-02  Ivan Frade  <ivan.frade@nokia.com>

	* tests/Makefile.am
	* tests/tracker-indexer/Makefile.am
	* tests/tracker-indexer/tracker-index-test.c: Added tests to 
	tracker-index.
	
2008-07-02  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-module-config.c:
	* src/trackerd/tracker-crawler.c:
	* src/trackerd/tracker-monitor.c: Plugged leaks which took the
	memory lost from 1.8Mb (33,498 blocks) to 36 bytes (1 block). Good
	old valgrind!

2008-07-02  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.c: (tracker_crawler_start):
	Actually set the path before checking if it exists or not, eek.

2008-07-02  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/libtracker-db/tracker-db-manager.c: Memory leak fix

2008-07-02  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-search.c:
	* src/trackerd/tracker-files.c:
	* src/trackerd/tracker-xesam-live-search.c:
	* src/trackerd/tracker-xesam-manager.c:
	* src/libtracker-db/tracker-db-manager.h:

	Replaced a few strings with defines

2008-07-02  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/tracker-indexer/tracker-indexer-db.c:
	* src/tracker-indexer/tracker-indexer-db.h:
	* src/tracker-indexer/tracker-indexer.c:

	Transactions per TRANSACTION_MAX items
	One possible cause for the constraint errors fixed

2008-07-01  Philip Van Hoof  <pvanhoof@gnome.org>
