@@ -87,6 +87,7 @@ void                tracker_db_metadata_set_single               (TrackerDBInter
 								  const gchar         *key,
 								  const gchar         *value,
 								  gboolean             do_backup);
+/*
 void                tracker_db_metadata_insert_embedded          (TrackerDBInterface  *iface,
 								  const gchar         *service,
 								  const gchar         *id,
@@ -99,6 +100,7 @@ void                tracker_db_metadata_insert_single_embedded   (TrackerDBInter
 								  const gchar         *key,
 								  const gchar         *value,
 								  GHashTable          *table);
+*/
 void                tracker_db_metadata_delete_value             (TrackerDBInterface  *iface,
 								  const gchar         *service,
 								  const gchar         *id,
@@ -157,23 +159,35 @@ guint32             tracker_db_file_get_id                       (TrackerDBInter
 gchar *             tracker_db_file_get_id_as_string             (TrackerDBInterface  *iface,
 								  const gchar         *service,
 								  const gchar         *uri);
+/*
 TrackerDBFileInfo * tracker_db_file_get_info                     (TrackerDBInterface  *iface,
 								  TrackerDBFileInfo   *info);
+*/
+/*
 gboolean            tracker_db_file_is_up_to_date                (TrackerDBInterface  *iface,
 								  const gchar         *uri,
 								  guint32             *id);
+*/
+/*
 void                tracker_db_file_delete                       (TrackerDBInterface  *iface,
 								  guint32              file_id);
+*/
+/*
 void                tracker_db_file_move                         (TrackerDBInterface  *iface,
 								  const gchar         *moved_from_uri,
 								  const gchar         *moved_to_uri);
+*/
+/*
 void                tracker_db_directory_delete                  (TrackerDBInterface  *iface,
 								  guint32              file_id,
 								  const gchar         *uri);
+*/
+/*
 void                tracker_db_directory_move                    (TrackerDBInterface  *iface,
 								  const gchar         *moved_from_uri,
 								  const gchar         *moved_to_uri);
-/*
+*/
+								  /*
 void                tracker_db_uri_insert_pending                (const gchar         *id,
 								  const gchar         *action,
 								  const gchar         *counter,
@@ -186,8 +200,10 @@ void                tracker_db_uri_update_pending                (const gchar   
 								  const gchar         *action,
 								  const gchar         *uri);
 */
+/*
 TrackerDBResultSet *tracker_db_uri_get_subfolders                (TrackerDBInterface  *iface,
 								  const gchar         *uri);
+*/
 /*
 TrackerDBResultSet *tracker_db_uri_sub_watches_get               (const gchar         *dir);
 TrackerDBResultSet *tracker_db_uri_sub_watches_delete            (const gchar         *dir);
